--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
+    "@types/node-sass": "4.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/prop-types": "15.7.3",
+    "@types/bootstrap": "4.3.2",
+    "@types/react-bootstrap": "0.32.20",
     "@types/jest": "^24.0.0",
     "@types/prettier": "1.19.0",
     "@types/eslint-plugin-prettier": "2.2.0",
