--- a/package.json
+++ b/package.json
@@ -21,32 +21,37 @@
     "Jovani Pink (https://www.jovanipink.com/)"
   ],
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "prop-types": "15.7.2",
-    "react-scripts": "3.4.1",
     "bootstrap": "4.4.1",
+    "formik": "^2.1.4",
+    "prop-types": "15.7.2",
+    "react": "16.13.1",
     "react-bootstrap": "1.0.0",
-    "typescript": "3.7.2"
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "typescript": "3.7.2",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
-    "@types/node": "^12.0.0",
-    "@types/node-sass": "4.11.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/prop-types": "15.7.3",
-    "@types/bootstrap": "4.3.2",
-    "@types/react-bootstrap": "0.32.20",
-    "@types/jest": "^24.0.0",
-    "@types/prettier": "1.19.0",
-    "@types/eslint-plugin-prettier": "2.2.0",
-    "node-sass": "4.13.1",
     "@storybook/addon-actions": "5.3.17",
     "@storybook/addon-docs": "5.3.17",
     "@storybook/addon-links": "5.3.17",
     "@storybook/addons": "5.3.17",
     "@storybook/preset-create-react-app": "2.1.1",
     "@storybook/react": "5.3.17",
+    "@testing-library/jest-dom": "5.1.1",
+    "@testing-library/react": "10.0.1",
+    "@testing-library/react-hooks": "3.2.1",
+    "@testing-library/user-event": "10.0.0",
+    "@types/bootstrap": "4.3.2",
+    "@types/eslint-plugin-prettier": "2.2.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/node-sass": "4.11.0",
+    "@types/prettier": "1.19.0",
+    "@types/prop-types": "15.7.3",
+    "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "0.32.20",
+    "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "2.23.0",
     "@typescript-eslint/parser": "2.23.0",
     "eslint-config-airbnb-typescript": "7.0.0",
@@ -59,14 +64,11 @@
     "eslint-plugin-react-hooks": "2.5.0",
     "eslint-plugin-simple-import-sort": "5.0.2",
     "eslint-plugin-testing-library": "2.2.3",
-    "prettier": "1.19.1",
-    "ts-jest": "25.2.1",
-    "@testing-library/react": "10.0.1",
-    "@testing-library/react-hooks": "3.2.1",
-    "@testing-library/user-event": "10.0.0",
-    "@testing-library/jest-dom": "5.1.1",
     "husky": "4.2.3",
-    "lint-staged": "10.0.8"
+    "lint-staged": "10.0.8",
+    "node-sass": "4.13.1",
+    "prettier": "1.19.1",
+    "ts-jest": "25.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
