--- a/.editorconfig
+++ b/.editorconfig
@@ -1,23 +1,45 @@
 # EditorConfig is awesome: http://EditorConfig.org
 
-# top-most EditorConfig file
+# This file is the top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# All Files
 [*]
-end_of_line = lf
+charset = utf-8
+indent_style = space
+indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+# Batch Files
+[*.{cmd,bat}]
+end_of_line = crlf
+
+# Unix-style newlines with a newline ending every file
+
+# Bash Files
+[*.sh]
+end_of_line = lf
+
+# Makefiles
+[Makefile]
+indent_style = tab
+
+# Actual Application Code Files
 
 # Matches multiple files with brace expansion notation
 # Set default charset
 [*.{js,py}]
 charset = utf-8
 
-# Indentation override for all JS under lib directory
-[*.{js,css,html}]
+# Indentation override for all JS/TS under lib directory
+[*.{js,jsx,ts,tsx,json,css,scss,html}]
 indent_style = space
 indent_size = 2
+
+# Markdown Doc
+[*.md]
+trim_trailing_whitespace = false
 
 # Matches the exact files either package.json or .travis.yml
 [{package.json,.travis.yml}]
@@ -28,11 +50,3 @@ indent_size = 2
 [*.sls, *.yaml, *.yml]
 indent_style = space
 indent_size = 2
-
-# Markdown Doc
-[*.md]
-trim_trailing_whitespace = false
-
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
